Fix word spacing in navbar band name

--- a/css/agency.css
+++ b/css/agency.css
@@ -137,6 +137,7 @@ img::-moz-selection {
 #mainNav .navbar-brand {
   color: #a6a6a6;
   font-size: 3vw;
+  word-spacing: 0.5vw;
   font-family: 'OPTIEdgarBold-Extended', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
